[package]
name = "copystr"
version = "0.0.2"
authors = ["Stephan Luther <kvsari@gmail.com>"]
license = "MIT"
description = "&str with `Copy` semantics."
repository = "https://github.com/kvsari/copystr"
documentation = "https://docs.rs/copystr/0.0.2/"
keywords = ["string"]
edition = "2018"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
